--- a/pages/Home/home.kv
+++ b/pages/Home/home.kv
@@ -15,6 +15,7 @@ FloatLayout:
         MDRaisedButton:
             id: btn_play
             text: "JOGAR"
+            theme_text_color: "Custom"
             text_color: utils.get_color_from_hex('#2F2F2F')
             font_name: "fonts/Rajdhani-Bold.ttf"
             font_size: 32
@@ -27,6 +28,7 @@ FloatLayout:
         MDRaisedButton:
             id: btn_options
             text: "OPÇÕES"
+            theme_text_color: "Custom"
             text_color: utils.get_color_from_hex('#2F2F2F')
             font_name: "fonts/Rajdhani-Bold.ttf"
             font_size: 32
@@ -39,6 +41,7 @@ FloatLayout:
         MDRaisedButton:
             id: btn_quit
             text: "SAIR"
+            theme_text_color: "Custom"
             text_color: utils.get_color_from_hex('#2F2F2F')
             font_name: "fonts/Rajdhani-Bold.ttf"
             font_size: 32
@@ -50,6 +53,7 @@ FloatLayout:
 
     MDLabel:
         text: f"Copyright © { date.today().year } Hand Games. Todos os direitos reservados."
+        theme_text_color: "Custom"
         text_color: utils.get_color_from_hex('#2F2F2F')
         font_name: "fonts/Rajdhani-Regular.ttf"
         font_size: 12
