chore: add TODOs

--- a/pages/NearestNumber/nearestNumber.kv
+++ b/pages/NearestNumber/nearestNumber.kv
@@ -2,6 +2,8 @@
 #:import date datetime.date
 #:import back_games pages.back_games
 
+# TODO: adicionar botões para jogar o jogo
+
 FloatLayout:
 
     MDRectangleFlatIconButton:
